# gitmate

./: .env  README.md  git_extractor.py  istructions.py  main.py  orchestrator.py  pyproject.toml  test_ai.py
gitmate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scribe/: ai_engine.py  ai_runner.py  cmd_changelog.py  cmd_commit.py  cmd_readme.py  create_global_configuration.py  folder_extractor.py  git_extractor.py  interaction_handler.py  istructions.py  main.py  orchestrator.py  prompt_builder.py  template_manger.py  token_reducer.py
scribe/ai_package/: ai_engine.py  ai_runner.py  istructions.py  prompt_builder.py  template_manger.py  token_reducer.py
scribe/cmd/: cmd_changelog.py  cmd_commit.py  cmd_readme.py  cmd_release.py  interaction_handler.py  loading_bar.py
scribe/extractor/: folder_extractor.py  gitignore_parser.py  tree_generator.py
scribe/git/: git_extractor.py
scribe/template/: large_readme.md  medium_readme.md  small_readme.md
